--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.1",
+    "firebase": "^9.6.10",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-flip-move": "^3.0.4",
     "react-scripts": "5.0.0",
     "react-twitter-embed": "^4.0.4",
     "styled-components": "^5.3.5",
